# brolog

./: .gitignore  LICENSE  README.md  input.pl  main.py  nx.py  parse.py  prolog.py  pyproject.toml  test.pl  test.py
.github/workflows/: ci.yml  pypi_upload.yml
blog/: about.html  animations.js  highlight-prolog.js  highlight.css  highlight.js  index.html  main.css  main.html  projects.html  research.html
brolog/: __init__.py  cli.py  lex.py  objects.py  parse.py  solver.py
tests/: test_solver_output.py
tests/data/: append.json  cut.json  list-member.json  list.json  transitivity.json
